# kredit

./: .gitignore  Procfile
backend/: .env  auth.py  database.py  db.py  gemini_service.py  main.py  models.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 798ff3e2a291_add_default_categories_to_existing_users.py  7bff6dfd6d3f_initial_migration.py
backend/scripts/: create_user.py
tasks/after/: 01-setup.md  02-post-setup.md  03-cors-fix.md  04-first-features.md  05-web-styleguide.md  06-invoices-and-reports.md  07-migrations-and-fixes.md  08-category-modifications.md  09-more-reports.md
tasks/todo/: 01-setup.md  02-post-setup.md  03-cors-fix.md  04-first-features.md  05-web-styleguide.md  06-invoices-and-reports.md  07-migrations-and-fixes.md  08-category-modifications.md  09-more-reports.md
web/: .prettierrc  eslint.config.js  index.html  package.json  vite.config.ts
web/src/: App.tsx  api.ts  auth-context.tsx  layout.tsx
web/src/pages/: categories.tsx  dashboard.tsx  import.tsx  login.tsx  spendings.tsx
